fixed overflow-y

--- a/src/app/components/filter/filter.component.scss
+++ b/src/app/components/filter/filter.component.scss
@@ -1,5 +1,5 @@
 mat-accordion {
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 80%;
   mat-expansion-panel {
     mat-expansion-panel-header {
